Issue #175: Convert /communities to OpenApi yaml specification
