# service/src/main/java/com/myhome/controllers/mapper/CommunityApiMapper.java
@@ -18,14 +18,14 @@ package com.myhome.controllers.mapper;
 
 import com.myhome.controllers.dto.CommunityDto;
 import com.myhome.controllers.dto.CommunityHouseName;
-import com.myhome.controllers.request.CreateCommunityRequest;
-import com.myhome.controllers.response.CreateCommunityResponse;
-import com.myhome.controllers.response.GetCommunityDetailsResponse;
 import com.myhome.controllers.response.GetHouseDetailsResponse;
 import com.myhome.controllers.response.ListCommunityAdminsResponse;
 import com.myhome.domain.Community;
 import com.myhome.domain.CommunityHouse;
 import com.myhome.domain.User;
+import com.myhome.model.CreateCommunityRequest;
+import com.myhome.model.CreateCommunityResponse;
+import com.myhome.model.GetCommunityDetailsResponseCommunity;
 import java.util.Set;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -34,10 +34,10 @@ import org.mapstruct.Mapping;
 public interface CommunityApiMapper {
   CommunityDto createCommunityRequestToCommunityDto(CreateCommunityRequest request);
 
-  GetCommunityDetailsResponse.Community communityToRestApiResponseCommunity(
+  GetCommunityDetailsResponseCommunity communityToRestApiResponseCommunity(
       Community community);
 
-  Set<GetCommunityDetailsResponse.Community> communitySetToRestApiResponseCommunitySet(
+  Set<GetCommunityDetailsResponseCommunity> communitySetToRestApiResponseCommunitySet(
       Set<Community> communitySet);
 
   CreateCommunityResponse communityToCreateCommunityResponse(Community community);
